service-platform-operations/base-yamls/microservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${APP_NAMESPACE}
spec:
  selector:
    app: ${APP_NAME}-app
  type: ClusterIP
  ports:
  - port: ${APP_SVC_PORT}
    targetPort: ${APP_CONT_PORT}
